# Projektas2

./: CMakeLists.txt  README.md  main.cpp  studentas.h
Doxygen/: annotated.html  catch__all_8hpp.html  catch__all_8hpp_source.html  class_studentas-members.html  class_studentas.html  class_zmogus-members.html  class_zmogus.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  isvedimas_8cpp.html  isvedimas_8h.html  isvedimas_8h_source.html  klausimai_8cpp.html  klausimai_8h.html  klausimai_8h_source.html  main_8cpp.html  md__r_e_a_d_m_e.html  menudata.js  nuskaityti_01duomenys_8cpp.html  nuskaityti__duomenys_8h.html  nuskaityti__duomenys_8h_source.html  pages.html  pazymiai_8cpp.html  pazymiai_8h.html  pazymiai_8h_source.html  random_8cpp.html  random_8h.html  random_8h_source.html  rusiavimas_8cpp.html  rusiavimas_8h.html  rusiavimas_8h_source.html  skaiciavimai_8cpp.html  skaiciavimai_8h.html  (+12 more)
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+9 more)
Tests/: Class.h  TESTS.cpp
